# security_appverify

./: BUILD.gn  OAT.XML  OAT.xml  README.md  README_zh.md  bundle.json  ohos.build
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
interfaces/innerkits/appverify/: BUILD.gn
interfaces/innerkits/appverify/config/: BUILD.gn  trusted_apps_sources.json  trusted_apps_sources_test.json
interfaces/innerkits/appverify/config/OpenHarmony/: trusted_apps_sources.json
interfaces/innerkits/appverify/include/common/: data_source.h  hap_byte_buffer.h  hap_byte_buffer_data_source.h  hap_file_data_source.h  hap_verify_log.h  random_access_file.h
interfaces/innerkits/appverify/include/init/: device_type_manager.h  hap_crl_manager.h  json_parser_utils.h  matching_result.h  trusted_root_ca.h  trusted_source_manager.h  trusted_ticket_manager.h
interfaces/innerkits/appverify/include/interfaces/: hap_verify.h  hap_verify_result.h
interfaces/innerkits/appverify/include/provision/: provision_info.h  provision_verify.h
interfaces/innerkits/appverify/include/ticket/: ticket_verify.h
interfaces/innerkits/appverify/include/util/: digest_parameter.h  hap_cert_verify_openssl_utils.h  hap_profile_verify_utils.h  string_hash.h  (+7 more)
interfaces/innerkits/appverify/test/: BUILD.gn
interfaces/innerkits/appverify_lite/: BUILD.gn
interfaces/innerkits/appverify_lite/include/: app_centraldirectory.h  app_common.h  app_file.h  app_provision.h  app_verify.h  app_verify_hal.h  app_verify_hap.h  app_verify_pub.h  mbedtls_pkcs7.h
interfaces/innerkits/appverify_lite/src/: app_centraldirectory.c  app_common.c  app_file.c  app_provision.c  app_verify.c  app_verify_hal.c  app_verify_hap.c  mbedtls_pkcs7.c
interfaces/innerkits/appverify_lite/unittest/: BUILD.gn
src/: app_centraldirectory.c  app_file.c  app_provision.c  app_verify.c  mbedtls_pkcs7.c
test/resource/appverify/: ohos_test.xml  verify_test.p7b
(+72 files in other folders)
